Sat May 25 08:58:23 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_quote_unprintable): check if argument is a string.

Fri May 24 19:32:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* variable.c (set_const_visibility): use rb_frame_this_func() instead
	  of rb_frame_callee() for getting the name of the called method

	* test/ruby/test_module.rb: add test for private_constant with no args

Fri May 24 18:53:10 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: do major/full GC when:
	  * number of oldgen object is bigger than twice of
	    number of oldgen object at last full GC.
	  * number of remembered shady object is bigger than twice of
	    number of remembered shady object at last full GC.
	  * number of oldgen object and remembered shady object is bigger
	    than half of total object space.
	  (please fix my English!)

Fri May 24 17:07:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* intern.h: remove dangling rb_class_init_copy declaration
	  [ruby-core:55120] [Bug #8434]

Fri May 24 16:31:23 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/strscan/strscan.c (strscan_aref): raise error if given
	  name reference is not found.

Fri May 24 15:48:18 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (after_gc_sweep, garbage_collect_body): do major GC (full GC)
	  before extending heaps.
	  TODO: do major GC when there are many old (promoted) objects.

	* gc.c (after_gc_sweep): remove TODO comments.

Fri May 24 11:04:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_RPATHFLAGS): do not append -L option with
	  runtime library directory if cross compiling, but only -R option.
	  runtime path makes no sense on the host system.  [ruby-dev:47363]
	  [Bug #8443]

Fri May 24 02:57:17 2013  Koichi Sasada  <ko1@atdot.net>

	* object.c (rb_obj_clone): should not propagate OLDGEN status.
	  This propagation had caused WB miss for class.

Thu May 23 17:35:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
